@@ -360,12 +360,18 @@ sammy.get
                   analysis_data[type][1] = [{ 'text': analysis_data[type][1] }]
                 }
 
-                var c = analysis_data[type][1].length;
-                for( var i = 0; i < c; i++ )
+                for( var i = 1; i < type_length; i += 2 )
                 {
-                  global_elements_count = Math.max( analysis_data[type][1][i].position || 0, global_elements_count );
+                  var tmp_type_length = analysis_data[type][i].length;
+                  for( var j = 0; j < tmp_type_length; j++ )
+                  {
+                    global_elements_count = Math.max
+                    (
+                      ( analysis_data[type][i][j].positionHistory || [] )[0] || 1,
+                      global_elements_count
+                    );
+                  }
                 }
-
 
                 var content = '<div class="' + type + '">' + "\n";
                 content += '<table border="0" cellspacing="0" cellpadding="0">' + "\n";
